--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ target/
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
+.idea/workspace.xml
+.idea/encodings.xml
 .idea/libraries/
 *.iws
 *.iml
